fix portfolio more work image overflow

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -564,7 +564,6 @@ overflow-x: hidden;
     -o-background-size: cover;
     background-size: cover;
     background-position: center;
-    width: 103%;
     color: white;
 }
 
